// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRounds() > ../../schema/fixtures/sets/id-quiz-greetings/set.json 的轉換結果（快照） 1`] = `
{
  "mcq": [
    {
      "entryId": "01M3ZYPR7R9Y800PH33AVYYKTM",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Terima kasih",
          },
          "id": "c",
        },
        {
          "correct": false,
          "face": {
            "text": "Selamat malam",
          },
          "id": "b",
        },
        {
          "correct": true,
          "face": {
            "text": "Selamat pagi",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「早安」的印尼語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPW4RXDH1EHPCP3DZCZRW",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Selamat pagi",
          },
          "id": "a",
        },
        {
          "correct": false,
          "face": {
            "text": "Terima kasih",
          },
          "id": "c",
        },
        {
          "correct": true,
          "face": {
            "text": "Sampai jumpa",
          },
          "id": "d",
        },
        {
          "correct": false,
          "face": {
            "text": "Apa kabar?",
          },
          "id": "b",
        },
      ],
      "prompt": {
        "text": "「再見」的印尼語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPT68Y4F0GMVKRXHT76FK",
      "options": [
        {
          "correct": true,
          "face": {
            "text": "不客氣",
          },
          "id": "c",
        },
        {
          "correct": false,
          "face": {
            "text": "謝謝",
          },
          "id": "a",
        },
        {
          "correct": false,
          "face": {
            "text": "再見",
          },
          "id": "b",
        },
      ],
      "prompt": {
        "text": "「Sama-sama」是什麼意思？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPS70YBQADB9W014YAB3G",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Sama-sama",
          },
          "id": "a",
        },
        {
          "correct": true,
          "face": {
            "text": "Terima kasih",
          },
          "id": "b",
        },
        {
          "correct": false,
          "face": {
            "text": "Maaf",
          },
          "id": "c",
        },
      ],
      "prompt": {
        "text": "「謝謝」的印尼語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPV5GFYPZ544KB3Z6EWCQ",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Halo",
          },
          "id": "b",
        },
        {
          "correct": true,
          "face": {
            "text": "Maaf",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「對不起」的印尼語是？",
      },
      "shape": "mcq",
    },
  ],
  "pair": [
    {
      "entryId": "01M3ZYPR7R9Y800PH33AVYYKTM",
      "left": {
        "text": "「早安」的印尼語是？",
      },
      "right": {
        "text": "Selamat pagi",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPW4RXDH1EHPCP3DZCZRW",
      "left": {
        "text": "「再見」的印尼語是？",
      },
      "right": {
        "text": "Sampai jumpa",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPT68Y4F0GMVKRXHT76FK",
      "left": {
        "text": "「Sama-sama」是什麼意思？",
      },
      "right": {
        "text": "不客氣",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPS70YBQADB9W014YAB3G",
      "left": {
        "text": "「謝謝」的印尼語是？",
      },
      "right": {
        "text": "Terima kasih",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPV5GFYPZ544KB3Z6EWCQ",
      "left": {
        "text": "「對不起」的印尼語是？",
      },
      "right": {
        "text": "Maaf",
      },
      "shape": "pair",
    },
  ],
}
`;

exports[`buildRounds() > ../../schema/fixtures/sets/id-vocab-fruits/set.json 的轉換結果（快照） 1`] = `
{
  "mcq": [
    {
      "entryId": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pisang",
          },
          "id": "01M3ZYPFEG8GF5P5PD9NWYK2JT",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "jeruk",
          },
          "id": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "橘子",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPP98AJFF8G55H6Z83BV9",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "apel",
          },
          "id": "01M3ZYPGDRQERH58MH1RKP8NX6",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "mangga",
          },
          "id": "01M3ZYPJC83KW8N8H9C5VW1BWW",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPGDRQERH58MH1RKP8NX6",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "jeruk",
          },
          "id": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "apel",
          },
          "id": "01M3ZYPGDRQERH58MH1RKP8NX6",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "semangka",
          },
          "id": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPFEG8GF5P5PD9NWYK2JT",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "pisang",
          },
          "id": "01M3ZYPFEG8GF5P5PD9NWYK2JT",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "semangka",
          },
          "id": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPNA06BJZ7QYSM0C4W7Y5",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "semangka",
          },
          "id": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "nanas",
          },
          "id": "01M3ZYPNA06BJZ7QYSM0C4W7Y5",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "mangga",
          },
          "id": "01M3ZYPJC83KW8N8H9C5VW1BWW",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPMARP8KRGECBB02ETN7V",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "jeruk",
          },
          "id": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "apel",
          },
          "id": "01M3ZYPGDRQERH58MH1RKP8NX6",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPJC83KW8N8H9C5VW1BWW",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pepaya",
          },
          "id": "01M3ZYPP98AJFF8G55H6Z83BV9",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "semangka",
          },
          "id": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "jeruk",
          },
          "id": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
        },
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "mangga",
          },
          "id": "01M3ZYPJC83KW8N8H9C5VW1BWW",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "id",
            "text": "semangka",
          },
          "id": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "pisang",
          },
          "id": "01M3ZYPFEG8GF5P5PD9NWYK2JT",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "jeruk",
          },
          "id": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
        },
        {
          "correct": false,
          "face": {
            "lang": "id",
            "text": "anggur",
          },
          "id": "01M3ZYPMARP8KRGECBB02ETN7V",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "shape": "mcq",
    },
  ],
  "pair": [
    {
      "entryId": "01M3ZYPHD0DDS3T9CJ8EDAKHV8",
      "left": {
        "lang": "zh-TW",
        "text": "橘子",
      },
      "right": {
        "lang": "id",
        "text": "jeruk",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPP98AJFF8G55H6Z83BV9",
      "left": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "right": {
        "lang": "id",
        "text": "pepaya",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPGDRQERH58MH1RKP8NX6",
      "left": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "right": {
        "lang": "id",
        "text": "apel",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPFEG8GF5P5PD9NWYK2JT",
      "left": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "right": {
        "lang": "id",
        "text": "pisang",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPNA06BJZ7QYSM0C4W7Y5",
      "left": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "right": {
        "lang": "id",
        "text": "nanas",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPMARP8KRGECBB02ETN7V",
      "left": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "right": {
        "lang": "id",
        "text": "anggur",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPJC83KW8N8H9C5VW1BWW",
      "left": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "right": {
        "lang": "id",
        "text": "mangga",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPKBGBWGGMBYRKV2YHEE4",
      "left": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "right": {
        "lang": "id",
        "text": "semangka",
      },
      "shape": "pair",
    },
  ],
}
`;

exports[`buildRounds() > ../../schema/fixtures/sets/th-vocab-fruits/set.json 的轉換結果（快照） 1`] = `
{
  "mcq": [
    {
      "entryId": "01M3ZYQEPGVW5GN483M2PVWX4M",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "kluai",
            "text": "กล้วย",
          },
          "id": "01M3ZYQCR0360FQWGSDAQFESTK",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "som",
            "text": "ส้ม",
          },
          "id": "01M3ZYQEPGVW5GN483M2PVWX4M",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "橘子",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQKJRVPW5RCF858Y9FXDF",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "aeppoen",
            "text": "แอปเปิล",
          },
          "id": "01M3ZYQDQ823GW2FPHB3YAK909",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "mamuang",
            "text": "มะม่วง",
          },
          "id": "01M3ZYQFNR3MNNFN71A7SFPR8G",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQDQ823GW2FPHB3YAK909",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "som",
            "text": "ส้ม",
          },
          "id": "01M3ZYQEPGVW5GN483M2PVWX4M",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "aeppoen",
            "text": "แอปเปิล",
          },
          "id": "01M3ZYQDQ823GW2FPHB3YAK909",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "taengmo",
            "text": "แตงโม",
          },
          "id": "01M3ZYQGN0AV3FECA1M3J7G6D0",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQCR0360FQWGSDAQFESTK",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "kluai",
            "text": "กล้วย",
          },
          "id": "01M3ZYQCR0360FQWGSDAQFESTK",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "taengmo",
            "text": "แตงโม",
          },
          "id": "01M3ZYQGN0AV3FECA1M3J7G6D0",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQJKG5A68B6MJB65JP8CW",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "taengmo",
            "text": "แตงโม",
          },
          "id": "01M3ZYQGN0AV3FECA1M3J7G6D0",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "sapparot",
            "text": "สับปะรด",
          },
          "id": "01M3ZYQJKG5A68B6MJB65JP8CW",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "mamuang",
            "text": "มะม่วง",
          },
          "id": "01M3ZYQFNR3MNNFN71A7SFPR8G",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQHM8TE6A919NWKTCJPND",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "som",
            "text": "ส้ม",
          },
          "id": "01M3ZYQEPGVW5GN483M2PVWX4M",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "aeppoen",
            "text": "แอปเปิล",
          },
          "id": "01M3ZYQDQ823GW2FPHB3YAK909",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQFNR3MNNFN71A7SFPR8G",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "malako",
            "text": "มะละกอ",
          },
          "id": "01M3ZYQKJRVPW5RCF858Y9FXDF",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "taengmo",
            "text": "แตงโม",
          },
          "id": "01M3ZYQGN0AV3FECA1M3J7G6D0",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "som",
            "text": "ส้ม",
          },
          "id": "01M3ZYQEPGVW5GN483M2PVWX4M",
        },
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "mamuang",
            "text": "มะม่วง",
          },
          "id": "01M3ZYQFNR3MNNFN71A7SFPR8G",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQGN0AV3FECA1M3J7G6D0",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "th",
            "romanization": "taengmo",
            "text": "แตงโม",
          },
          "id": "01M3ZYQGN0AV3FECA1M3J7G6D0",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "kluai",
            "text": "กล้วย",
          },
          "id": "01M3ZYQCR0360FQWGSDAQFESTK",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "som",
            "text": "ส้ม",
          },
          "id": "01M3ZYQEPGVW5GN483M2PVWX4M",
        },
        {
          "correct": false,
          "face": {
            "lang": "th",
            "romanization": "a-ngun",
            "text": "องุ่น",
          },
          "id": "01M3ZYQHM8TE6A919NWKTCJPND",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "shape": "mcq",
    },
  ],
  "pair": [
    {
      "entryId": "01M3ZYQEPGVW5GN483M2PVWX4M",
      "left": {
        "lang": "zh-TW",
        "text": "橘子",
      },
      "right": {
        "lang": "th",
        "romanization": "som",
        "text": "ส้ม",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQKJRVPW5RCF858Y9FXDF",
      "left": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "right": {
        "lang": "th",
        "romanization": "malako",
        "text": "มะละกอ",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQDQ823GW2FPHB3YAK909",
      "left": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "right": {
        "lang": "th",
        "romanization": "aeppoen",
        "text": "แอปเปิล",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQCR0360FQWGSDAQFESTK",
      "left": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "right": {
        "lang": "th",
        "romanization": "kluai",
        "text": "กล้วย",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQJKG5A68B6MJB65JP8CW",
      "left": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "right": {
        "lang": "th",
        "romanization": "sapparot",
        "text": "สับปะรด",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQHM8TE6A919NWKTCJPND",
      "left": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "right": {
        "lang": "th",
        "romanization": "a-ngun",
        "text": "องุ่น",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQFNR3MNNFN71A7SFPR8G",
      "left": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "right": {
        "lang": "th",
        "romanization": "mamuang",
        "text": "มะม่วง",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQGN0AV3FECA1M3J7G6D0",
      "left": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "right": {
        "lang": "th",
        "romanization": "taengmo",
        "text": "แตงโม",
      },
      "shape": "pair",
    },
  ],
}
`;

exports[`buildRounds() > ../../schema/fixtures/sets/vi-quiz-greetings/set.json 的轉換結果（快照） 1`] = `
{
  "mcq": [
    {
      "entryId": "01M3ZYQ6WGT6CYY66DFAY06R1D",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Tạm biệt",
          },
          "id": "c",
        },
        {
          "correct": false,
          "face": {
            "text": "Xin chào",
          },
          "id": "b",
        },
        {
          "correct": true,
          "face": {
            "text": "Cảm ơn",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「謝謝」的越南語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQASG3RQC350CDY5HS28T",
      "options": [
        {
          "correct": true,
          "face": {
            "text": "Bạn có khỏe không?",
          },
          "id": "c",
        },
        {
          "correct": false,
          "face": {
            "text": "Tạm biệt",
          },
          "id": "b",
        },
        {
          "correct": false,
          "face": {
            "text": "Bạn tên là gì?",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「你好嗎？」的越南語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ8V0V63JGT3VTPPQ2YK1",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "再見",
          },
          "id": "b",
        },
        {
          "correct": false,
          "face": {
            "text": "謝謝",
          },
          "id": "a",
        },
        {
          "correct": true,
          "face": {
            "text": "不客氣",
          },
          "id": "c",
        },
      ],
      "prompt": {
        "text": "「Không có gì」是什麼意思？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ7VR1MB2JNFJZHR8GM5J",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Tạm biệt",
          },
          "id": "d",
        },
        {
          "correct": true,
          "face": {
            "text": "Xin lỗi",
          },
          "id": "b",
        },
        {
          "correct": false,
          "face": {
            "text": "Cảm ơn",
          },
          "id": "c",
        },
        {
          "correct": false,
          "face": {
            "text": "Không có gì",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「對不起」的越南語是？",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ9T8ZMN8SH65B6B5PZPH",
      "options": [
        {
          "correct": false,
          "face": {
            "text": "Chúc ngủ ngon",
          },
          "id": "b",
        },
        {
          "correct": false,
          "face": {
            "text": "Xin chào",
          },
          "id": "c",
        },
        {
          "correct": true,
          "face": {
            "text": "Chúc mừng năm mới",
          },
          "id": "a",
        },
      ],
      "prompt": {
        "text": "「新年快樂」的越南語是？",
      },
      "shape": "mcq",
    },
  ],
  "pair": [
    {
      "entryId": "01M3ZYQ6WGT6CYY66DFAY06R1D",
      "left": {
        "text": "「謝謝」的越南語是？",
      },
      "right": {
        "text": "Cảm ơn",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQASG3RQC350CDY5HS28T",
      "left": {
        "text": "「你好嗎？」的越南語是？",
      },
      "right": {
        "text": "Bạn có khỏe không?",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ8V0V63JGT3VTPPQ2YK1",
      "left": {
        "text": "「Không có gì」是什麼意思？",
      },
      "right": {
        "text": "不客氣",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ7VR1MB2JNFJZHR8GM5J",
      "left": {
        "text": "「對不起」的越南語是？",
      },
      "right": {
        "text": "Xin lỗi",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ9T8ZMN8SH65B6B5PZPH",
      "left": {
        "text": "「新年快樂」的越南語是？",
      },
      "right": {
        "text": "Chúc mừng năm mới",
      },
      "shape": "pair",
    },
  ],
}
`;

exports[`buildRounds() > ../../schema/fixtures/sets/vi-vocab-fruits/set.json 的轉換結果（快照） 1`] = `
{
  "mcq": [
    {
      "entryId": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả chuối",
          },
          "id": "01M3ZYPY38WC6089XH59VBSYYS",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả cam",
          },
          "id": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "柳橙",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả táo",
          },
          "id": "01M3ZYPZ2G7JRB1C17YFZGM74K",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả xoài",
          },
          "id": "01M3ZYQ1101BM2CCBVKG1J3F9S",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPZ2G7JRB1C17YFZGM74K",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả cam",
          },
          "id": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả táo",
          },
          "id": "01M3ZYPZ2G7JRB1C17YFZGM74K",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả dưa hấu",
          },
          "id": "01M3ZYQ208RQHHRX7N0W7SXQE4",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYPY38WC6089XH59VBSYYS",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả chuối",
          },
          "id": "01M3ZYPY38WC6089XH59VBSYYS",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả dưa hấu",
          },
          "id": "01M3ZYQ208RQHHRX7N0W7SXQE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ3YRQHVYPGP21WXK83SB",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả dưa hấu",
          },
          "id": "01M3ZYQ208RQHHRX7N0W7SXQE4",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả dứa",
          },
          "id": "01M3ZYQ3YRQHVYPGP21WXK83SB",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả xoài",
          },
          "id": "01M3ZYQ1101BM2CCBVKG1J3F9S",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ2ZGZ851852KV8S7BMYM",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả cam",
          },
          "id": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả táo",
          },
          "id": "01M3ZYPZ2G7JRB1C17YFZGM74K",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ1101BM2CCBVKG1J3F9S",
      "options": [
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả đu đủ",
          },
          "id": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả dưa hấu",
          },
          "id": "01M3ZYQ208RQHHRX7N0W7SXQE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả cam",
          },
          "id": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
        },
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả xoài",
          },
          "id": "01M3ZYQ1101BM2CCBVKG1J3F9S",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "shape": "mcq",
    },
    {
      "entryId": "01M3ZYQ208RQHHRX7N0W7SXQE4",
      "options": [
        {
          "correct": true,
          "face": {
            "lang": "vi",
            "text": "quả dưa hấu",
          },
          "id": "01M3ZYQ208RQHHRX7N0W7SXQE4",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả chuối",
          },
          "id": "01M3ZYPY38WC6089XH59VBSYYS",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả cam",
          },
          "id": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
        },
        {
          "correct": false,
          "face": {
            "lang": "vi",
            "text": "quả nho",
          },
          "id": "01M3ZYQ2ZGZ851852KV8S7BMYM",
        },
      ],
      "prompt": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "shape": "mcq",
    },
  ],
  "pair": [
    {
      "entryId": "01M3ZYQ01R4AYPJHDJ3RYZYBZG",
      "left": {
        "lang": "zh-TW",
        "text": "柳橙",
      },
      "right": {
        "lang": "vi",
        "text": "quả cam",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ4Y0HZ4RAAQF69KJWSRH",
      "left": {
        "lang": "zh-TW",
        "text": "木瓜",
      },
      "right": {
        "lang": "vi",
        "text": "quả đu đủ",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPZ2G7JRB1C17YFZGM74K",
      "left": {
        "lang": "zh-TW",
        "text": "蘋果",
      },
      "right": {
        "lang": "vi",
        "text": "quả táo",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYPY38WC6089XH59VBSYYS",
      "left": {
        "lang": "zh-TW",
        "text": "香蕉",
      },
      "right": {
        "lang": "vi",
        "text": "quả chuối",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ3YRQHVYPGP21WXK83SB",
      "left": {
        "lang": "zh-TW",
        "text": "鳳梨",
      },
      "right": {
        "lang": "vi",
        "text": "quả dứa",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ2ZGZ851852KV8S7BMYM",
      "left": {
        "lang": "zh-TW",
        "text": "葡萄",
      },
      "right": {
        "lang": "vi",
        "text": "quả nho",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ1101BM2CCBVKG1J3F9S",
      "left": {
        "lang": "zh-TW",
        "text": "芒果",
      },
      "right": {
        "lang": "vi",
        "text": "quả xoài",
      },
      "shape": "pair",
    },
    {
      "entryId": "01M3ZYQ208RQHHRX7N0W7SXQE4",
      "left": {
        "lang": "zh-TW",
        "text": "西瓜",
      },
      "right": {
        "lang": "vi",
        "text": "quả dưa hấu",
      },
      "shape": "pair",
    },
  ],
}
`;
